--- a/Dashboard/react/package.json
+++ b/Dashboard/react/package.json
@@ -14,12 +14,11 @@
     "clsx": "^2.1.1",
     "motion": "^12.18.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0", 
+    "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.2",
     "styled-components": "^6.1.19",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.10"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -27,10 +26,13 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.10",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
