--- a/Dashboard/react/package.json
+++ b/Dashboard/react/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.10",
     "clsx": "^2.1.1",
     "motion": "^12.18.1",
